@@ -1,6 +1,8 @@
 Revision history for Perl extension ExtUtils::Depends.
 
 0.xxx <date>
+	- On Cygwin, link directly against the DLLs of dependencies.  Patch by
+          Yaakov.
 	- Require perl 5.6.0.
 
 0.300 Sun Mar 30 17:35:35 CEST 2008
